src/components/css/Grid-style.css
*{
    padding:0;
    margin:0;
}

.grid-container{
    display:grid;
    grid-template-columns: 25% 75%;
    width: 100vw;
    height: 100vh;
    
}

.grid-container_home{
    display:grid;
    grid-gap: 10px;
    background-color: #2c3e50;
    grid-template-columns: auto auto auto auto;
    grid-template-rows: auto auto auto auto;
    height:100%;
    width:100%;
}

.grid-item_side{
    display: grid;
    grid-template-rows: 1fr 4fr 1fr;
    padding: 10px;
    background-color: #3AAFA9;
    
}

.grid-item_main{
    display: grid;
    grid-template-rows: 20% 80%;
    background-color: #DEF2F1;
}

.grid-questions{
    display: grid;
    height:100%;
    width:100%;
    grid-template-rows: auto;
    text-align: center;
}

.grid-container_questions{
    width: 100%;
    height: 100%;
    
}

.grid-container_password{
    width: 40%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    margin: 0 auto;
 
}

.grid_button-container{
    display:grid;
    grid-template-columns: 1fr 1fr;
    grid-area: 3 / 1/ 3 /1;  
    grid-column-gap: 5px;
}


/* .home-container{
    width:100%;
    height:100%;
    left:0;
    right:0;

} */

